Fri, Apr 12, 2024, 10:42 PM +00:00

--- a/css-tutorial/swim.html
+++ b/css-tutorial/swim.html
@@ -104,6 +104,7 @@
    </article>
 
    <footer>
+      <br clear='all'>
       <address>
       Tri and Succeed Sports &bullet; 41 Venture Dr. &bullet; Austin,
       TX 78711 &bullet; 512.555.9917
